--- a/css/main.css
+++ b/css/main.css
@@ -557,6 +557,7 @@ footer .footer-copyright p {
 .project .flex .project-detail {
     width: 30%;
     transition: .5s ease-in-out;
+    margin-bottom: 3rem;
 }
 
 .project .flex .project-detail .img{
@@ -590,7 +591,7 @@ footer .footer-copyright p {
 }
 
 .project .flex .project-detail .project-info h2 {
-    margin: 2rem 0;
+    margin: 3rem 0;
 }
 
 .project .flex .project-detail .project-info span {
