--- a/css/main.css
+++ b/css/main.css
@@ -38,16 +38,21 @@ html {
   height: 100%;
   width: 100%;
   background-color: #fff;
-  transition: opacity 0.5s ease;
+  transition:1s ease-in-out;
   z-index: 99999;
 }
 
 .loader img {
+  height: 100%;
   width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .finish {
-  opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
 
@@ -313,8 +318,8 @@ nav .nav-center .nav-link ul li a:hover {
   margin-bottom: 2rem;
   background: #e2b751;
   -webkit-box-shadow: 3px 4px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    3px 4px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         3px 4px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 3px 4px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 3px 4px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
 .work .flex .work-info a img {
@@ -639,6 +644,7 @@ footer .footer-copyright p {
 
 /* ===== MEDIA QURIES START ===== */
 @media only screen and (max-width: 1100px) {
+
   /* ===== HERO START =====  */
   .hero .hero-right::before {
     display: none;
@@ -653,6 +659,11 @@ footer .footer-copyright p {
 @media only screen and (max-width: 900px) {
   html {
     font-size: 13px;
+  }
+
+  /* ===== LOADER START ===== */
+  .loader img {
+    height: 50%;
   }
 
   /* ===== NAV START ===== */
