--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
   font-size: 15px;
   scroll-behavior: smooth;
   font-family: "Lato", sans-serif;
+  font-style: italic;
 }
 
 /* ===== COMMON WIDTH ===== */
@@ -38,7 +39,7 @@ html {
   height: 100%;
   width: 100%;
   background-color: #fff;
-  transition:1s ease-in-out;
+  transition: 1s ease-in-out;
   z-index: 99999;
 }
 
@@ -67,7 +68,7 @@ nav {
 nav .nav-center {
   display: flex;
   justify-content: space-between;
-  text-align: center;
+  align-items: center;
 }
 
 nav .nav-center .logo {
@@ -156,12 +157,14 @@ nav .nav-center .nav-link ul li a:hover {
 }
 
 .hero .flex .hero-left .btn {
-  padding: 0.6rem 2rem;
   background-color: #e9b949;
-  text-decoration: none;
   color: black;
-  border-radius: 0.6rem;
-  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.1rem;
+  padding: 1rem 2rem;
+  border: none;
+  outline: none;
+  font-weight: bolder;
   transition: 0.5s ease-in-out;
 }
 
@@ -271,12 +274,14 @@ nav .nav-center .nav-link ul li a:hover {
 }
 
 .about .flex .about-right a {
-  padding: 0.6rem 1.5rem;
   background-color: #e9b949;
-  text-decoration: none;
   color: black;
-  border-radius: 0.6rem;
-  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.1rem;
+  padding: 1rem 2rem;
+  border: none;
+  outline: none;
+  font-weight: bolder;
   transition: 0.5s ease-in-out;
 }
 
@@ -313,9 +318,9 @@ nav .nav-center .nav-link ul li a:hover {
 }
 
 .work .flex .work-info {
-  width: 48%;
+  width: 45%;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   background: #e2b751;
   -webkit-box-shadow: 3px 4px 5px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow: 3px 4px 5px 0px rgba(50, 50, 50, 0.75);
@@ -349,98 +354,41 @@ nav .nav-center .nav-link ul li a:hover {
 
 /* ===== SKILLS START =====   */
 .skill {
-  padding: 5rem 0;
-  background-color: #fceec5;
+  padding: 8rem 0;
 }
 
 .skill .skill-header h1 {
-  font-size: 3.4rem;
+  font-size: 3rem;
   text-align: center;
   margin-bottom: 0.5rem;
 }
 
 .skill .skill-header .border {
-  width: 5rem;
+  width: 15rem;
   margin: 0 auto;
   background-color: #e9b949;
   padding: 0.1rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-.skill .skill-front h2 {
-  color: #513c06;
-  font-size: 2rem;
-  margin-bottom: 2rem;
-}
-
-.skill .skill-front .skill-info .text {
+.skill .skill-btn {
   display: flex;
-  color: #513c06;
-  font-weight: 100;
-  margin-bottom: 0.4rem;
+  justify-content: space-around;
+  padding-top: 5rem;
 }
 
-.skill .skill-front .skill-info .text p {
-  position: absolute;
-  left: 72%;
+.skill .skill-btn button {
+  background-color: #e9b949;
+  font-size: 1.1rem;
+  padding: 1rem 2rem;
+  border: none;
+  outline: none;
+  font-weight: bolder;
 }
 
-.skill .skill-front .skill-info .skill-container {
-  background-color: #fff;
-  border-radius: 5rem;
-  padding: 0.5rem;
-  position: relative;
-}
-
-.skill .skill-front .skill-info .skill-container .skill-value {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #e2b751;
-  border-radius: 5rem;
-  height: 100%;
-  width: 80%;
-  padding: 0.4rem;
-}
-
-.skill .skill-front .css {
-  margin-top: 1.5rem;
-}
-
-.skill .skill-front .css .text p {
-  position: absolute;
-  left: 70%;
-}
-
-.skill .skill-front .css .skill-container .skill-value {
-  width: 75%;
-}
-
-.skill .skill-front .bootstrap {
-  margin-top: 1.5rem;
-}
-
-.skill .skill-front .bootstrap .text p {
-  position: absolute;
-  left: 70%;
-}
-
-.skill .skill-front .bootstrap .skill-container .skill-value {
-  width: 80%;
-}
-
-.skill .skill-front .js {
-  margin-top: 1.5rem;
-}
-
-.skill .skill-front .js .text p {
-  position: absolute;
-  left: 42%;
-}
-
-.skill .skill-front .js .skill-container .skill-value {
-  width: 50%;
+.skill .skill-btn button:hover {
+  opacity: .8;
 }
 
 /* ===== FOOTER START ====  */
@@ -474,7 +422,7 @@ footer .footer-copyright p {
 
 /* ===== ABOUT ME START =====  */
 .about-me {
-  padding-top: 7rem;
+  padding-top: 9rem;
   padding-bottom: 8rem;
   background-color: #fffaeb;
   text-align: center;
@@ -507,13 +455,13 @@ footer .footer-copyright p {
   margin: 2rem 0;
   word-spacing: 0.2rem;
   letter-spacing: 0.1rem;
-  line-height: 1.6rem;
+  line-height: 1.9rem;
 }
 
 /* ===== CONTACT START =====  */
 .contact {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
   background-color: #fffaeb;
   text-align: center;
 }
@@ -521,7 +469,7 @@ footer .footer-copyright p {
 .contact .contact-header h1 {
   font-size: 3.9rem;
   text-align: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
 }
 
 .contact .contact-header .border {
@@ -530,7 +478,7 @@ footer .footer-copyright p {
   background-color: #e9b949;
   padding: 0.16rem;
   margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .contact .info {
@@ -542,7 +490,7 @@ footer .footer-copyright p {
   font-size: 1.2rem;
   color: #617d98;
   font-weight: 700;
-  margin: 2rem 0;
+  margin: 0.5rem 0;
   word-spacing: 0.2rem;
   letter-spacing: 0.1rem;
   line-height: 1.6rem;
@@ -658,7 +606,7 @@ footer .footer-copyright p {
 
 @media only screen and (max-width: 900px) {
   html {
-    font-size: 13px;
+    font-size: 13.5px;
   }
 
   /* ===== LOADER START ===== */
@@ -743,6 +691,10 @@ footer .footer-copyright p {
     margin: 1rem auto;
   }
 
+  .about .flex .about-right p {
+    padding: 0 1rem;
+  }
+
   /* ===== WORK START =====  */
   .work .flex {
     flex-direction: column;
@@ -750,6 +702,15 @@ footer .footer-copyright p {
 
   .work .flex .work-info {
     width: 100%;
+  }
+
+  /* ===== SKILLS START =====   */
+  .skill .skill-btn {
+    flex-direction: column;
+  }
+
+  .skill .skill-btn button {
+    margin-bottom: 2rem;
   }
 
   /* ===== PROJECT START =====  */
