--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* ===== GOOGLE FONT ===== */
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 
 * {
   margin: 0;
@@ -8,9 +8,9 @@
 }
 
 html {
-  font-size: 15px;
+  font-size: 16px;
   scroll-behavior: smooth;
-  font-family: "Lato", sans-serif;
+  font-family: 'Redressed', cursive;
   font-style: italic;
 }
 
